# hspc

./: .gitignore  CHANGELOG.md  README.md  haskell-pascal.cabal
.github/workflows/: haskell.yml  test.yml
app/: Main.hs
src/: HSPC.hs
src/HSPC/: CodeGen.hs  ELF.hs  Parse.hs  Tokenize.hs  TypeCheck.hs
test/: Main.hs
test/sample_programs/: comments_curly_brace.pas  comments_single_line.pas  comparison_equality.pas  comparison_greater_than.pas  comparison_less_than.pas  for.pas  for_down.pas  for_nested.pas  generate_goldens.bash  halt_after_halt.pas  if_block.pas  if_complex_cond.pas  if_else.pas  if_else_if.pas  if_no_else.pas  ints_255_exit_code.pas  ints_big_exit_code.pas  operators_add_two_ints.pas  operators_bool_and.pas  operators_bool_not.pas  operators_bool_or.pas  operators_brackets.pas  operators_divide_two_ints.pas  operators_multiply_two_ints.pas  operators_sub_two_ints.pas  operators_unary_minus_int.pas  operators_unary_plus_int.pas  return_one.pas  variables_bool.pas  variables_single_var.pas  while.pas  while_block.pas  while_less_than.pas  while_not_equal_10.pas
